<resources>
    <string name="app_name">LuckyNumber</string>
    <string name="welcome_to_lucky_number">Welcome to Lucky Number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="wish_me_a_luck">Wish Me A Luck</string>
    <string name="your_lucky_number_is">Your Lucky Number is:</string>
    <string name="_12">12</string>
    <string name="share_my_luck">Share my Luck</string>
    <string name="share">Share</string>
</resources>